--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "common"]
 	path = common
 	url = https://github.com/subfuel/common.git
+[submodule "api"]
+	path = api
+	url = https://github.com/subfuel/api.git
